--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -33,7 +33,9 @@ force_try:
   severity: warning # explicitly
 # rules that have both warning and error levels, can set just the warning level
 # implicitly
-line_length: 150
+line_length:
+    warning: 150
+    ignores_comments: true
 # they can set both implicitly with an array
 type_body_length:
   - 300 # warning
@@ -50,7 +52,8 @@ type_name:
   max_length: # warning and error
     warning: 40
     error: 50
-  excluded: iPhone # excluded via string
+  excluded:
+    - T # excluded via string
   allowed_symbols: ["_"] # these are allowed in type names
 
 reporter: "xcode" # reporter type (xcode, json, csv, checkstyle, junit, html, emoji, sonarqube, markdown)
