--- a/MuseuZap/MuseuZap.entitlements
+++ b/MuseuZap/MuseuZap.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.museuGroup</string>
+		<string>group.museuIgnacioGroup</string>
 	</array>
 </dict>
 </plist>
