--- a/MuseuZap.xcodeproj/xcshareddata/xcschemes/MuseuZap.xcscheme
+++ b/MuseuZap.xcodeproj/xcshareddata/xcschemes/MuseuZap.xcscheme
@@ -71,6 +71,12 @@
             ReferencedContainer = "container:MuseuZap.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-noFIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "FB_REFERENCE_IMAGE_DIR"
