--- a/MuseuZap.xcodeproj/xcshareddata/xcschemes/MuseuZap.xcscheme
+++ b/MuseuZap.xcodeproj/xcshareddata/xcschemes/MuseuZap.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6473EDD0243B6D3700A10F2C"
-               BuildableName = "MuseuZap.app"
+               BuildableName = "Blin.app"
                BlueprintName = "MuseuZap"
                ReferencedContainer = "container:MuseuZap.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6473EDD0243B6D3700A10F2C"
-            BuildableName = "MuseuZap.app"
+            BuildableName = "Blin.app"
             BlueprintName = "MuseuZap"
             ReferencedContainer = "container:MuseuZap.xcodeproj">
          </BuildableReference>
@@ -66,7 +66,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6473EDD0243B6D3700A10F2C"
-            BuildableName = "MuseuZap.app"
+            BuildableName = "Blin.app"
             BlueprintName = "MuseuZap"
             ReferencedContainer = "container:MuseuZap.xcodeproj">
          </BuildableReference>
@@ -101,7 +101,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "6473EDD0243B6D3700A10F2C"
-            BuildableName = "MuseuZap.app"
+            BuildableName = "Blin.app"
             BlueprintName = "MuseuZap"
             ReferencedContainer = "container:MuseuZap.xcodeproj">
          </BuildableReference>
